wasta-multidesktop-bionic (1.2.5) bionic; urgency=medium

  * debian/control: adding theme items as recommends

 -- Rik Shaw <rikshaw76@gmail.com>  Fri, 11 Jan 2019 10:37:43 +0300

wasta-multidesktop-bionic (1.2.4) bionic; urgency=medium

  * wasta-login.sh: killall user-level dbus-daemon at the end

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 09 Jan 2019 20:15:46 +0300

wasta-multidesktop-bionic (1.2.3) bionic; urgency=medium

  * wasta-login.sh: correcting get and set xfce background
    - killall dconf processes at the end

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 09 Jan 2019 09:40:36 +0300

wasta-multidesktop-bionic (1.2.2) bionic; urgency=medium

  * schemas: adding Wasta customized Gnome settings (wasta-core gives default
    Ubuntu experience.

 -- Rik Shaw <rikshaw76@gmail.com>  Tue, 08 Jan 2019 13:35:36 +0300

wasta-multidesktop-bionic (1.2.1) bionic; urgency=medium

  * app-adjustments.sh: adding items to XFCE Settings Manager
    - disabling call to ibus-xkb-adjustments.sh to see if will solve problem
      of ibus getting corrupted for some users

 -- Rik Shaw <rikshaw76@gmail.com>  Tue, 08 Jan 2019 13:06:56 +0300

wasta-multidesktop-bionic (1.2.0) bionic; urgency=medium

  * initial xfce support
  * app-adjustments.sh: arc-theme whiskermenu compatibility
  * wasta-login.sh: xfce compatibility

 -- Rik Shaw <rikshaw76@gmail.com>  Thu, 20 Dec 2018 09:30:08 +0300

wasta-multidesktop-bionic (1.1.2) bionic; urgency=medium

  * debian/control: setting Conflicts:gdm3

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 05 Sep 2018 19:30:14 +0300

wasta-multidesktop-bionic (1.1.1) bionic; urgency=medium

  * wasta-login: hide thunar-settings in cinnamon and ubuntu/gnome

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 05 Sep 2018 15:51:00 +0300

wasta-multidesktop-bionic (1.1.0) bionic; urgency=medium

  * app-adjustments: cleanup zip folder creation

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 05 Sep 2018 13:47:00 +0300

wasta-multidesktop-bionic (1.0.7) bionic; urgency=medium
