@@ -58,6 +58,9 @@
 #       - adding killall dbus-daemon (user level) since I think these are
 #       getting generated by the dbus-launch commands and many are active
 #       after login completes.
+#   2019-01-12 rik: restoring clock panel applet settings (bug loses them
+#       if don't restart the panel before closing the applet settings:
+#       https://askubuntu.com/questions/959339/xfce-panel-clock-disappears)
 #
 # ==============================================================================
 
@@ -147,8 +150,8 @@ then
     exit 0
 fi
 
-# xfconfd: started but shouldn't be running (likely residual from logged out
-#   xfce session)
+# xfconfd: started but shouldn't be running (likely residual from previous
+#   logged out xfce session)
 if [ "$(pidof xfconfd)" ];
 then
     if [ $DEBUG ];
@@ -173,7 +176,7 @@ if [ -x /usr/bin/xfce4-session ];
 then
     XFCE_DEFAULT_SETTINGS="/etc/xdg/xdg-xfce/xfce4/"
     XFCE_SETTINGS="/home/$CURR_USER/.config/xfce4/"
-    if ! [ -e $XFCE_DESKTOP ];
+    if ! [ -e $XFCE_SETTINGS ];
     then
         if [ $DEBUG ];
         then
@@ -833,6 +836,63 @@ xfce)
             echo "nautilus running (TOP) and needs killed: $(pidof nautilus-desktop)" | tee -a $LOGFILE
         fi
         killall nautilus-desktop | tee -a $LOGFILE
+    fi
+
+    # --------------------------------------------------------------------------
+    # XFCE Settings
+    # --------------------------------------------------------------------------
+    XFCE_DEFAULT_PANEL="/etc/xdg/xdg-xfce/xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml"
+    XFCE_PANEL="/home/$CURR_USER/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml"
+    if ! [ -e $XFCE_PANEL ];
+    then
+        if [ $DEBUG ];
+        then
+            echo "Creating xfce4-panel.xml for user" | tee -a $LOGFILE
+        fi
+        mkdir -p $XFCE_SETTINGS/xfconf/xfce-perchannel-xml/
+        cp $XFCE_DEFAULT_PANEL $XFCE_PANEL
+    fi
+
+    # xfce clock applet loses it's config if opened and closed without first
+    #    stopping the xfce4-panel.  So reset to defaults
+    # https://askubuntu.com/questions/959339/xfce-panel-clock-disappears
+    #
+    # using xmlstarlet since can't be sure of clock plugin #
+    DEFAULT_DIGITAL_FORMAT=$(xmlstarlet sel -T -t -m \
+        '//channel[@name="xfce4-panel"]/property[@name="plugins"]/property[@value="clock"]/property[@name="digital-format"]/@value' \
+        -v . -n $XFCE_DEFAULT_PANEL)
+    #    DIGITAL_FORMAT=$(xmlstarlet sel -T -t -m \
+    #        '//channel[@name="xfce4-panel"]/property[@name="plugins"]/property[@value="clock"]/property[@name="digital-format"]/@value' \
+    #        -v . -n $XFCE_PANEL)
+    BLANK_DIGITAL_FORMAT=$(grep '"digital-format" type="string" value=""' $XFCE_PANEL)
+
+    if [ "$BLANK_DIGITAL_FORMAT" ];
+    then
+        if [ $DEBUG ];
+        then
+            echo "xfce4-panel clock digital-format removed: resetting" | tee -a $LOGFILE
+        fi
+        # rik: below doesn't work since when $XFCE_PANEL put in ~/.config the NAMEs
+        # are removed from the plugin properties: don't want to rely on plugin number so
+        # instead will have to hack it with sed
+        #        xmlstarlet ed --inplace -u \
+        #            '//channel[@name="xfce4-panel"]/property[@name="plugins"]/property[@value="clock"]/property[@name="digital-format"]/@value' \
+        #            -v "$DEFAULT_DIGITAL_FORMAT" $XFCE_PANEL
+        sed -i -e 's@\("digital-format" type="string" value=\)""@\1"'"$DEFAULT_DIGITAL_FORMAT"'"@' $XFCE_PANEL
+    fi
+
+    DEFAULT_TOOLTIP_FORMAT=$(xmlstarlet sel -T -t -m \
+        '//channel[@name="xfce4-panel"]/property[@name="plugins"]/property[@value="clock"]/property[@name="tooltip-format"]/@value' \
+        -v . -n $XFCE_DEFAULT_PANEL)
+    BLANK_TOOLTIP_FORMAT=$(grep '"tooltip-format" type="string" value=""' $XFCE_PANEL)
+
+    if [ "$BLANK_TOOLTIP_FORMAT" ];
+    then
+        if [ $DEBUG ];
+        then
+            echo "xfce4-panel clock tooltip-format removed: resetting" | tee -a $LOGFILE
+        fi
+        sed -i -e 's@\("tooltip-format" type="string" value=\)""@\1"'"$DEFAULT_TOOLTIP_FORMAT"'"@' $XFCE_PANEL
     fi
 ;;
 
